tests/ui/borrowck/deref-mut.stderr
error[E0502]: cannot borrow `y` as mutable because it is also borrowed as immutable
  --> $DIR/deref-mut.rs:9:6
   |
LL |     let shared_ref = &y;
   |                      -- immutable borrow occurs here
LL |     *y = Foo { a: 3 };
   |      ^ mutable borrow occurs here
LL |
LL |     takes_shared_foo_ref(shared_ref);
   |                          ---------- immutable borrow later used here

error[E0502]: cannot borrow `y` as mutable because it is also borrowed as immutable
  --> $DIR/deref-mut.rs:16:6
   |
LL |     let shared_ref = &y.a;
   |                       - immutable borrow occurs here
LL |     *y = Foo { a: 3 };
   |      ^ mutable borrow occurs here
LL |
LL |     takes_shared_u32_ref(shared_ref);
   |                          ---------- immutable borrow later used here

error[E0502]: cannot borrow `y` as mutable because it is also borrowed as immutable
  --> $DIR/deref-mut.rs:23:5
   |
LL |     let shared_ref = &y.a;
   |                       - immutable borrow occurs here
LL |     y.a = 3;
   |     ^ mutable borrow occurs here
LL |
LL |     takes_shared_u32_ref(shared_ref);
   |                          ---------- immutable borrow later used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0502`.
